<resources>
    <string name="app_name" translatable="false">WomenApp</string>
    <string name="women_services">Women Services</string>
    <string name="all_services">All Services</string>
    <string name="advance_search">Advance Search</string>
    <string name="enter_service_name">Enter Service name</string>
    <string name="age">Age</string>
    <string name="caste">Caste</string>
    <string name="state">State</string>
    <string name="search">Search</string>
    <string name="title_activity_login">Sign in</string>


    <!--String Related to LoginActivity -->
    <string name="new_user_sign_up">New User? Sign UP</string>
    <string name="login">Log in</string>
    <string name="Login_textView">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="add_service_information">Add Service Information</string>
    <string name="service_name">Service Name</string>
    <string name="service_info">Service Info</string>
    <string name="minimun_age">Minimun Age</string>
    <string name="maximum_age">Maximum Age</string>
    <string name="Login_caste">Caste</string>
    <string name="Login_state">State</string>
    <string name="add_service">Add Service</string>
    <string name="service_name1">Service Name</string>
    <string name="service_state">Service State</string>
    <string name="service_caste">Service Caste</string>
    <string name="age1">Age</string>
    <string name="service_information">Service Information</string>
    <string name="todo">TODO</string>
    <string name="all_services1">All Services</string>
    <string name="check_all_services">Check All services</string>
    <string name="advance_search1">Advance Search</string>
    <string name="search_services">Search Services</string>
    <string name="add">Add</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="login_main">Login</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="bookmarked_services">Bookmarked Services</string>
    <string name="change_language">Change Language</string>
    <string name="name">Name :</string>
    <string name="stateDetails">State :</string>
    <string name="casteDetails">Caste :</string>
    <string name="ageDetails">Age :</string>
    <string name="information">Information :</string>
    <string name="bookmark">Bookmark</string>
    <string name="AdvanceSearchResult">Advance Search Result</string>
    <string name="bookmarkActivity">Bookmark</string>
    <string name="AddActivity">Add Service</string>
    <string name="ServiceDetailsActivity">Service Details</string>

    //Toast Strings
    <string name="addserviceToast">Please Enter all Fields</string>
    <string name="addserviceToast1">Service Added</string>
    <string name="addserviceToast2">Service Addition Failed!!!!</string>
    <string name="advanceSearchToast">Enter Valid Age</string>
    <string name="advanceSearchResultToast">No service Found According to Search Constraint Search Again</string>
    <string name="bookmarkActivityToast">No Bookmarks Present</string>
    <string name="LoginActivityToast">Enter Email And Password</string>
    <string name="LoginActivityToast1">Login Successful</string>
    <string name="LoginActivityToast2">Login Failed</string>
    <string name="MainActivityToast">Caution : This Will also Change Device Language</string>
    <string name="ServiceDetailsActivityToast">Added to Bookmark</string>
    <string name="ServiceDetailsActivityToast2">Removed From Bookmark</string>

    //id visible

    <item name="visible" type="id" />
    <item name="masked" type="id" />


    <string-array name="StatesArray">
        <item>All</item>>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>


    <string-array name="CasteArray">
        <item>All</item>
        <item>OBC</item>
        <item>SC</item>
        <item>ST</item>
    </string-array>
</resources>


